--- a/CatchUppApi/appsettings.json
+++ b/CatchUppApi/appsettings.json
@@ -10,5 +10,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionsStrings" : {
+    "CatchUp": "Server=tcp:catchupkolor.database.windows.net,1433;Initial Catalog=CatchUp;Persist Security Info=False;User ID=kolor_ug;Password=kn_KolUG;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
